Integrate Snyk for vulnerability scanning in lint workflow
Added Snyk action to lint workflow for vulnerability checks.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,3 +24,9 @@ jobs:
 
       - name: Run linter
         run: npx --no-install jshint@2.12.0 .
+      - name: Example workflow for Node using Snyk
+        uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
